@@ -18,6 +18,8 @@
 
 package org.apache.cassandra.sidecar.config.yaml;
 
+import java.nio.file.attribute.PosixFilePermissions;
+
 import com.fasterxml.jackson.annotation.JsonProperty;
 import org.apache.cassandra.sidecar.config.SSTableUploadConfiguration;
 
@@ -28,8 +30,12 @@ public class SSTableUploadConfigurationImpl implements SSTableUploadConfiguratio
 {
     public static final String CONCURRENT_UPLOAD_LIMIT_PROPERTY = "concurrent_upload_limit";
     public static final int DEFAULT_CONCURRENT_UPLOAD_LIMIT = 80;
+
     public static final String MIN_FREE_SPACE_PERCENT_PROPERTY = "min_free_space_percent";
     public static final float DEFAULT_MIN_FREE_SPACE_PERCENT = 10;
+
+    public static final String FILE_PERMISSIONS_PROPERTY = "file_permissions";
+    public static final String DEFAULT_FILE_PERMISSIONS = "rw-r--r--";
 
     @JsonProperty(value = CONCURRENT_UPLOAD_LIMIT_PROPERTY, defaultValue = DEFAULT_CONCURRENT_UPLOAD_LIMIT + "")
     protected final int concurrentUploadsLimit;
@@ -37,30 +43,39 @@ public class SSTableUploadConfigurationImpl implements SSTableUploadConfiguratio
     @JsonProperty(value = MIN_FREE_SPACE_PERCENT_PROPERTY, defaultValue = DEFAULT_MIN_FREE_SPACE_PERCENT + "")
     protected final float minimumSpacePercentageRequired;
 
+    protected String filePermissions;
+
     public SSTableUploadConfigurationImpl()
     {
-        this(DEFAULT_CONCURRENT_UPLOAD_LIMIT, DEFAULT_MIN_FREE_SPACE_PERCENT);
+        this(DEFAULT_CONCURRENT_UPLOAD_LIMIT, DEFAULT_MIN_FREE_SPACE_PERCENT, DEFAULT_FILE_PERMISSIONS);
     }
 
     public SSTableUploadConfigurationImpl(int concurrentUploadsLimit)
     {
-        this(concurrentUploadsLimit, DEFAULT_MIN_FREE_SPACE_PERCENT);
+        this(concurrentUploadsLimit, DEFAULT_MIN_FREE_SPACE_PERCENT, DEFAULT_FILE_PERMISSIONS);
     }
 
     public SSTableUploadConfigurationImpl(float minimumSpacePercentageRequired)
     {
-        this(DEFAULT_CONCURRENT_UPLOAD_LIMIT, minimumSpacePercentageRequired);
+        this(DEFAULT_CONCURRENT_UPLOAD_LIMIT, minimumSpacePercentageRequired, DEFAULT_FILE_PERMISSIONS);
+    }
+
+    public SSTableUploadConfigurationImpl(String filePermissions)
+    {
+        this(DEFAULT_CONCURRENT_UPLOAD_LIMIT, DEFAULT_MIN_FREE_SPACE_PERCENT, filePermissions);
     }
 
     public SSTableUploadConfigurationImpl(int concurrentUploadsLimit,
-                                          float minimumSpacePercentageRequired)
+                                          float minimumSpacePercentageRequired,
+                                          String filePermissions)
     {
         this.concurrentUploadsLimit = concurrentUploadsLimit;
         this.minimumSpacePercentageRequired = minimumSpacePercentageRequired;
+        setFilePermissions(filePermissions);
     }
 
     /**
-     * @return the maximum number of concurrent SSTable component uploads allowed for this service
+     * {@inheritDoc}
      */
     @Override
     @JsonProperty(value = CONCURRENT_UPLOAD_LIMIT_PROPERTY, defaultValue = DEFAULT_CONCURRENT_UPLOAD_LIMIT + "")
@@ -70,12 +85,45 @@ public class SSTableUploadConfigurationImpl implements SSTableUploadConfiguratio
     }
 
     /**
-     * @return the configured minimum space percentage required for an SSTable component upload
+     * {@inheritDoc}
      */
     @Override
     @JsonProperty(value = MIN_FREE_SPACE_PERCENT_PROPERTY, defaultValue = DEFAULT_MIN_FREE_SPACE_PERCENT + "")
     public float minimumSpacePercentageRequired()
     {
         return minimumSpacePercentageRequired;
+    }
+
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    @JsonProperty(value = FILE_PERMISSIONS_PROPERTY, defaultValue = DEFAULT_FILE_PERMISSIONS)
+    public String filePermissions()
+    {
+        return filePermissions;
+    }
+
+    @JsonProperty(value = FILE_PERMISSIONS_PROPERTY, defaultValue = DEFAULT_FILE_PERMISSIONS)
+    public void setFilePermissions(String filePermissions)
+    {
+        if (filePermissions != null)
+        {
+            try
+            {
+                // forces a validation of the input
+                this.filePermissions = PosixFilePermissions.toString(PosixFilePermissions.fromString(filePermissions));
+            }
+            catch (IllegalArgumentException exception)
+            {
+                String errorMessage = String.format("Invalid file_permissions configuration=\"%s\"", filePermissions);
+                throw new IllegalArgumentException(errorMessage);
+            }
+        }
+        else
+        {
+            this.filePermissions = null;
+        }
     }
 }
