@@ -1,0 +1,56 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.apache.cassandra.sidecar.config.yaml;
+
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+
+/**
+ * Unit tests to validate {@link SSTableUploadConfigurationImpl} inputs
+ */
+class SSTableUploadConfigurationImplTest
+{
+    @Test
+    void testNullFilePermissions()
+    {
+        SSTableUploadConfigurationImpl config = new SSTableUploadConfigurationImpl(null);
+        assertThat(config.filePermissions()).isNull();
+    }
+
+    @ParameterizedTest(name = "{index} => invalid permission string \"{0}\"")
+    @ValueSource(strings = { "", "aaaaaaaaa", "rwxaaaaaa", "rwx", "null" })
+    void filePermissionsFailsOnInvalidString(String value)
+    {
+        assertThatIllegalArgumentException()
+        .isThrownBy(() -> new SSTableUploadConfigurationImpl(value))
+        .withMessage("Invalid filePermissions configuration=\"" + value + "\"");
+    }
+
+    @ParameterizedTest(name = "{index} => valid permission string \"{0}\"")
+    @ValueSource(strings = { "---------", "rwx------", "rwxr--r--", "r-xr-xr-x", "r-xr-xrwx" })
+    void testValidFilePermission(String value)
+    {
+        SSTableUploadConfigurationImpl config = new SSTableUploadConfigurationImpl(value);
+        assertThat(config.filePermissions()).isEqualTo(value);
+    }
+}
