@@ -75,7 +75,7 @@ sidecar:
   sstable_upload:
     concurrent_upload_limit: 80
     min_free_space_percent: 10
-    # file_permissions: "rw-r--r--" # when not specified, the default file permissions are owner read & write, group & others read
+    file_permissions: "not-valid"
   allowable_time_skew_in_minutes: 60
   sstable_import:
     poll_interval_millis: 100
